--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -17,7 +17,7 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
+			<li><a class="login-link" href="login.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -69,5 +69,6 @@
 </footer>
 
 <script src="app.js"></script>
+<script src="auth.js"></script>
 </body>
 </html>
