--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -34,21 +34,21 @@
 			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 		</article>
 	</section>
-	<!--<a href="#modal" class="modal-link">modale</a> WORK IN PROGRESS! -->
+
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<h2>Mes Projets          <a href="#modal" class="modal-link hidden"><iframe src="assets/icons/modifyIcon.svg"></iframe>modifier</a></h2>
+
         <div class="filters">
 
 
         </div>
 
 		<aside class="modal" id="modal" aria-hidden="true" role="complementary" aria-labelledby="gallery-modal" style="display:none;">
+
 			<div class="modal-content js-stop-modal">
-				<button class="js-close-modal">X</button>
-				<h2 id="gallery-modal">Galerie Photo</h2>
-				<div class="modal-cards"></div>
-				<button class="add-project">Ajouter une photo</button>
-				<a href="#">Supprimer la galerie</a>
+				<a  href="#" class="js-close-modal"><img src="assets/icons/close.png"></a>
+				<h2>Galerie photo</h2>
+
 			</div>
 		</aside>
 
