Add new project system

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/modalStyle.css">
 </head>
 <body>
 <header>
@@ -46,9 +47,6 @@
 		<aside class="modal" id="modal" aria-hidden="true" role="complementary" aria-labelledby="gallery-modal" style="display:none;">
 
 			<div class="modal-content js-stop-modal">
-				<a  href="#" class="js-close-modal"><img src="assets/icons/close.png"></a>
-				<h2>Galerie photo</h2>
-
 			</div>
 		</aside>
 
