--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
 </header>
-<main>
+<main class="login-body">
     <div class="login-form">
         <div class="title"><h2>Log in</h2></div>
         <form>
