Focus lock in modal

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,7 +37,7 @@
 	</section>
 
 	<section id="portfolio">
-		<h2>Mes Projets          <a href="#modal" class="modal-link hidden"><img src="assets/icons/modifyIcon.svg"></img>modifier</a></h2>
+		<h2>Mes Projets          <a href="#modal" class="modal-link hidden"><img src="assets/icons/modifyIcon.svg">modifier</a></h2>
 
         <div class="filters">
 
